<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/UsageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/SelectedTime"
            android:layout_width="80.7dp"
            android:layout_height="20.7dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="39dp"
            android:background="@drawable/back"
            android:gravity="center_horizontal"
            android:text="@string/selected_time"
            android:textColor="#959595"
            android:textSize="8.7sp" />

        <Spinner
            android:id="@+id/spinner_time_span"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="39dp"
            android:background="@android:color/transparent" />

        <com.example.android.socialaddict.CircularCompletionView
            android:id="@+id/UsageCircle"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/SelectedTime"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SelectedTime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/total_time"
            android:textColor="#222222"
            android:textSize="32sp" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/Pick_Header"
            android:layout_alignParentStart="true"
            android:layout_below="@id/SelectedTime"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/Pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="57.3dp"
            android:gravity="center_horizontal"
            android:text="@string/picked_up"
            android:textColor="#555555"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Pick_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/verticalSep"
            android:layout_alignStart="@+id/Pick"
            android:gravity="center_horizontal"
            android:text="@string/pick_header"
            android:textColor="#959595"
            android:textSize="8.7sp" />

        <TextView
            android:id="@+id/PeakHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Pick"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="65dp"
            android:gravity="center_horizontal"
            android:text="@string/Peak_header"
            android:textColor="#959595"
            android:textSize="8.7sp" />

        <TextView
            android:id="@+id/Peak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/PeakHeader"
            android:layout_marginEnd="48dp"
            android:gravity="center_horizontal"
            android:text="@string/peak"
            android:textColor="#555555"
            android:textSize="16sp" />

        <View
            android:id="@+id/verticalSep"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:background="@android:color/darker_gray" />

        <View
            android:id="@+id/HorizontalSep"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/UsageLayout"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_open_usage_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/open_app_usage_setting"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_app_usage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:drawSelectorOnTop="true"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />
    </RelativeLayout>

</LinearLayout>
